# opengl

./: .gitignore
freeglut/triangle/: Makefile  commands.txt  compile_commands.json  ogl.cpp
freeglut/window/: Makefile  compile_commands.json  main.cpp
glfw/cube/: Makefile  compile_commands.json  cube  fragment.glsl  main.cpp  matrix  shader.cpp  vertex.glsl
glfw/escape/: CMakeLists.txt  Makefile  main.cpp
glfw/extension-list/: CMakeLists.txt  Makefile  main.cpp
glfw/glew/: Makefile  main.cpp
glfw/matrix/: Makefile  main.cpp  vertex.glsl
glfw/shader/: Makefile  main.cpp  shader.cpp  shader.h  vao
glfw/triangle_color/: CMakeLists.txt  Makefile  compile_commands.json  main.cpp  ogl
glfw/triangle_white/: Makefile  main.cpp  ogl
glfw/vao/: CMakeLists.txt  Makefile  main.cpp  vao
glfw/window/: Makefile  compile_commands.json  main.cpp  ogl
xlib/: main.c  triangle_color.cpp
xlib/cube-gradient-rotate/src/: main.cpp
xlib/cube-random/include/: shader.h
xlib/cube-random/src/: main.cpp
xlib/cube-shader/src/: main.cpp
xlib/cube-texture-rotate/: Makefile
xlib/cube-texture-rotate/src/: main.cpp  shader.cpp
xlib/cube-transform/: cube  fragment.glsl
xlib/cube-transform/src/: main.cpp
xlib/cube-vao/: compile_commands.json  fragment.glsl  vertex.glsl
xlib/cube-vao/src/: main.cpp
xlib/ffp/: hammer-simple.mtl  hammer.mtl
xlib/ffp/disco/: main.cpp
xlib/ffp/doughnut/: main.cpp
xlib/ffp/fractal/: mandlebrot.cpp
xlib/ffp/mandlebrot/: .clang-format  Makefile  compile_commands.json  main.cpp  mandelbrot
xlib/ffp/mandlebrot/include/: mandlebrot.h
xlib/ffp/mandlebrot/src/: main.cpp  mandlebrot.cpp
xlib/ffp/shadow/: .clang-format  build.sh  main.cpp  xwindow  xwindow.c
xlib/ffp/triangle/: main.cpp
xlib/ffp/triangle-texture/: .clang-format  Makefile  main.c  model.hex  triangle
xlib/ffp/triangle-texture/src/: main.cpp
xlib/gl-ctxt/: Makefile
xlib/gl-ctxt/src/: main.cpp
xlib/load-model/: cube.model
xlib/pp/01-Triangle/: CMakeLists.txt  compile_commands.json  vertex.glsl
xlib/pp/01-Triangle/src/: main.cpp
xlib/pp/02-Perspective/: CMakeLists.txt  compile_commands.json
xlib/pp/02-Perspective/include/: shader.h
xlib/pp/02-Perspective/src/: main.cpp  shader.cpp
xlib/shader/: vertex.glsl
xlib/shader/src/: main.cpp
xlib/triangle-shader/: Makefile
xlib/triangle-shader/src/: main.cpp
xlib/triangle-texture/: compile_commands.json  fragment.glsl
xlib/triangle-texture/src/: main.cpp
xlib/vmath/: .clang-format  cube.mtl  fragment.glsl  model.hex  vertex.glsl  vmath
xlib/vmath-cube/: .clang-format
xlib/vmath-cube/src/: main.cpp
xlib/vmath-vao/: Makefile  compile_commands.json  load-vao.c  model.hex  vertex.glsl  vmath
xlib/vmath-vao/src/: main.cpp
xlib/vmath/src/: main.cpp
